[gd_scene load_steps=44 format=3 uid="uid://cf0fxa3ac7nhb"]

[ext_resource type="Texture2D" uid="uid://cv0l1yvaxjpda" path="res://Assets/Charakter/adventurer-Sheet.png" id="1_upfeo"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_x6ic7"]
[ext_resource type="Texture2D" uid="uid://b7og07wr1d60t" path="res://Assets/Charakter/adventurer-bow-Sheet.png" id="3_pq8sw"]
[ext_resource type="PackedScene" uid="uid://bcs26su4ta5m1" path="res://Scenes/HPBar.tscn" id="4_1tvyj"]
[ext_resource type="FontFile" uid="uid://suqy7pestg6u" path="res://fonts/Tiny5-Regular.ttf" id="5_ohqks"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b4vwf"]
atlas = ExtResource("1_upfeo")
region = Rect2(150, 106, 50, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1oox"]
atlas = ExtResource("1_upfeo")
region = Rect2(200, 106, 50, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_6d1d2"]
atlas = ExtResource("1_upfeo")
region = Rect2(250, 106, 50, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcss4"]
atlas = ExtResource("1_upfeo")
region = Rect2(300, 106, 50, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7j37"]
atlas = ExtResource("1_upfeo")
region = Rect2(0, 149, 50, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pgxq"]
atlas = ExtResource("1_upfeo")
region = Rect2(0, 0, 50, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhumi"]
atlas = ExtResource("1_upfeo")
region = Rect2(50, 0, 50, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_yngw6"]
atlas = ExtResource("1_upfeo")
region = Rect2(100, 0, 50, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7miuy"]
atlas = ExtResource("1_upfeo")
region = Rect2(150, 0, 50, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_2scye"]
atlas = ExtResource("1_upfeo")
region = Rect2(0, 220, 50, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_40lm8"]
atlas = ExtResource("1_upfeo")
region = Rect2(50, 220, 50, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjadd"]
atlas = ExtResource("1_upfeo")
region = Rect2(100, 220, 50, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiuuu"]
atlas = ExtResource("1_upfeo")
region = Rect2(150, 220, 50, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qped"]
atlas = ExtResource("1_upfeo")
region = Rect2(200, 220, 50, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqywn"]
atlas = ExtResource("3_pq8sw")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwace"]
atlas = ExtResource("3_pq8sw")
region = Rect2(50, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrte0"]
atlas = ExtResource("3_pq8sw")
region = Rect2(100, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_7adeb"]
atlas = ExtResource("3_pq8sw")
region = Rect2(150, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mfd8"]
atlas = ExtResource("3_pq8sw")
region = Rect2(0, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlebr"]
atlas = ExtResource("3_pq8sw")
region = Rect2(50, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fx6y"]
atlas = ExtResource("3_pq8sw")
region = Rect2(100, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7ws0"]
atlas = ExtResource("3_pq8sw")
region = Rect2(150, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_5id7j"]
atlas = ExtResource("3_pq8sw")
region = Rect2(0, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_sg1yu"]
atlas = ExtResource("1_upfeo")
region = Rect2(50, 40, 50, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_10cu8"]
atlas = ExtResource("1_upfeo")
region = Rect2(100, 40, 50, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_46gkb"]
atlas = ExtResource("1_upfeo")
region = Rect2(150, 40, 50, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qrm1"]
atlas = ExtResource("1_upfeo")
region = Rect2(200, 40, 50, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3sgr"]
atlas = ExtResource("1_upfeo")
region = Rect2(250, 40, 50, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn2o1"]
atlas = ExtResource("1_upfeo")
region = Rect2(300, 40, 50, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_he8wf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4vwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1oox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6d1d2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcss4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7j37")
}],
"loop": false,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pgxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhumi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yngw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7miuy")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2scye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40lm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjadd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiuuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qped")
}],
"loop": false,
"name": &"mele_atk",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqywn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwace")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrte0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7adeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mfd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlebr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fx6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7ws0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5id7j")
}],
"loop": false,
"name": &"range_atk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sg1yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10cu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46gkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qrm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3sgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn2o1")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_t5187"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mt8bw"]
radius = 10.198

[sub_resource type="Animation" id="Animation_ri0gh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_4ofmk"]
resource_name = "range_atk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.533333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1vl5n"]
_data = {
"RESET": SubResource("Animation_ri0gh"),
"range_atk": SubResource("Animation_4ofmk")
}

[sub_resource type="Gradient" id="Gradient_1a27s"]
offsets = PackedFloat32Array(0, 0.75974)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b8jio"]
gradient = SubResource("Gradient_1a27s")
width = 150
height = 150
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tpobd"]
size = Vector2(19.4959, 27.3951)

[node name="Player" type="CharacterBody2D"]
position = Vector2(193, 118)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_x6ic7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -14)
sprite_frames = SubResource("SpriteFrames_he8wf")
animation = &"mele_atk"
autoplay = "idle"
frame = 4

[node name="arrowSpawnPoint" type="Node2D" parent="AnimatedSprite2D"]
position = Vector2(30, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -14)
scale = Vector2(1.1584, 1.16809)
shape = SubResource("CircleShape2D_t5187")

[node name="player_hitbox" type="Area2D" parent="."]
position = Vector2(0, 2)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_mt8bw")

[node name="atk_cooldown" type="Timer" parent="."]
wait_time = 0.9

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -14)
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 1750
limit_bottom = 1080
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1vl5n")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -14)
range_z_max = 0
texture = SubResource("GradientTexture2D_b8jio")

[node name="ProgressBar2" parent="." instance=ExtResource("4_1tvyj")]
offset_left = -10.0
offset_top = -34.0
offset_right = 9.0
offset_bottom = -31.0

[node name="CurrentWood" type="Label" parent="."]
offset_left = -17.0
offset_top = -50.0
offset_right = 18.0
offset_bottom = -35.0
theme_override_fonts/font = ExtResource("5_ohqks")
theme_override_font_sizes/font_size = 8
text = "Wood: x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AtkArea" type="Area2D" parent="."]

[node name="AtkHitbox" type="CollisionShape2D" parent="AtkArea"]
position = Vector2(12.708, -18)
scale = Vector2(1.1584, 1.16809)
shape = SubResource("RectangleShape2D_tpobd")

[node name="dash_timer" type="Timer" parent="."]

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="atk_cooldown" to="." method="_on_atk_cooldown_timeout"]
[connection signal="body_entered" from="AtkArea" to="." method="_on_atk_area_body_entered"]
[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
